update videos path

--- a/Pose esitmation.ipynb
+++ b/Pose esitmation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "id": "f228e9b9",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "id": "f9efc83d",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "id": "83454333",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "id": "90ebcfe7",
    "metadata": {},
    "outputs": [],
@@ -121,6 +121,17 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import math\n",
+    "\n",
+    "\n",
+    "_PRESENCE_THRESHOLD = 0.5\n",
+    "_VISIBILITY_THRESHOLD = 0.5\n",
+    "_BGR_CHANNELS = 3\n",
+    "\n",
+    "WHITE_COLOR = (224, 224, 224)\n",
+    "BLACK_COLOR = (0, 0, 0)\n",
+    "RED_COLOR = (0, 0, 255)\n",
+    "GREEN_COLOR = (0, 128, 0)\n",
+    "BLUE_COLOR = (255, 0, 0)\n",
     "\n",
     "@dataclasses.dataclass\n",
     "class DrawingSpec:\n",
@@ -215,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 7,
    "id": "5b7dd8d7",
    "metadata": {},
    "outputs": [
@@ -265,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "id": "0a5b3f22",
    "metadata": {},
    "outputs": [],
@@ -321,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "id": "272da8f9",
    "metadata": {},
    "outputs": [
@@ -329,21 +340,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [03:13<00:00,  1.94s/it]\n"
+      " 34%|███████████████████████████▌                                                     | 34/100 [00:46<00:51,  1.28it/s]"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "from_video('./../data/vid1.mp4')"
+    "from_video('./data/videos/vid1.mp4')"
    ]
   },
   {
