add ground point

--- a/Pose esitmation.ipynb
+++ b/Pose esitmation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f228e9b9",
    "metadata": {},
    "outputs": [],
@@ -18,8 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f76b8ad3",
+   "execution_count": 3,
+   "id": "bd105bfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "90ebcfe7",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
     "        plt.savefig(save_path, transparent=True)\n",
     "    if show is True:\n",
     "        plt.show()\n",
-    "    buf = []\n",
+    "    buf = io.BytesIO()\n",
     "    fig.savefig(buf, format='png')\n",
     "    buf.seek(0)\n",
     "    plt.close()\n",
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5b7dd8d7",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
     "        mp_pose.POSE_CONNECTIONS,\n",
     "        landmark_drawing_spec=mp_drawing_styles.get_default_pose_landmarks_style())\n",
     "    # mp_drawing.plot_landmarks(results.pose_world_landmarks, mp_pose.POSE_CONNECTIONS)\n",
-    "    plot_landmarks(results.pose_world_landmarks, mp_pose.POSE_CONNECTIONS, show=True, save_path='3dpic.png')\n",
+    "    plt_img = plot_landmarks(results.pose_world_landmarks, mp_pose.POSE_CONNECTIONS, show=True, save_path='3dpic.png')\n",
     "    # cv2.imshow(\"Someimage\",image)\n",
     "    cv2.waitKey(0) \n",
     "    cv2.destroyAllWindows() "
@@ -309,8 +309,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "6fba2b40",
+   "execution_count": 6,
+   "id": "b0eb0d4f",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
        "visibility: 0.9636950492858887"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "0a5b3f22",
    "metadata": {},
    "outputs": [],
@@ -371,16 +371,14 @@
     "                # cv2.imshow('Pose detection', cv2.flip(image, -1))\n",
     "                if save:\n",
     "                    out.write(image)\n",
-    "                    figid = '3d/' + str(cnt) + '.png'\n",
     "                    plt_img = plot_landmarks(\n",
     "                        results.pose_world_landmarks,\n",
     "                        mp_pose.POSE_CONNECTIONS,\n",
-    "                        save_path=figid,\n",
     "                        azimuth=cnt*2)\n",
-    "                    \n",
-    "                    img = cv2.imread(figid)\n",
-    "                    img = cv2.resize(img, (480, 640))\n",
-    "                    out2.write(img)\n",
+    "\n",
+    "                    plt_img = cv2.imdecode(np.frombuffer(plt_img.getvalue(), dtype=np.uint8), 1)\n",
+    "                    plt_img = cv2.resize(plt_img, (480, 640))\n",
+    "                    out2.write(plt_img)\n",
     "                cnt = cnt + 1\n",
     "                if cv2.waitKey(5) & 0xFF == 27:\n",
     "                    break\n",
@@ -393,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "272da8f9",
    "metadata": {},
    "outputs": [
@@ -401,8 +399,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 74%|███████████████████████████████████████████████████████████▉                     | 74/100 [01:43<00:35,  1.38s/it]"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [01:23<00:00,  1.20it/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -411,16 +418,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "6032eebe",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def from_video_3d(path): \n",
+    "    cap = cv2.VideoCapture(path)\n",
+    "    cnt = 1\n",
+    "    frames = 100\n",
+    "    fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
+    "    out = cv2.VideoWriter('pose_ground_fast.mp4', fourcc, 20.0, (480,640))\n",
+    "    with mp_pose.Pose(\n",
+    "        min_detection_confidence=0.5,\n",
+    "        min_tracking_confidence=0.5,\n",
+    "        model_complexity=2) as pose:\n",
+    "        while cap.isOpened() and cnt < frames:\n",
+    "            for i in tqdm(range(0, frames)):\n",
+    "                success, image = cap.read()\n",
+    "                if not success:\n",
+    "                    break\n",
+    "\n",
+    "                image = cv2.resize(image, (480, 640))\n",
+    "                image = cv2.flip(image, -1)\n",
+    "                image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "                results = pose.process(image)\n",
+    "                plt_img = plot_landmarks(\n",
+    "                    results.pose_world_landmarks,\n",
+    "                    mp_pose.POSE_CONNECTIONS,\n",
+    "                    azimuth=cnt*2)\n",
+    "\n",
+    "                plt_img = cv2.imdecode(np.frombuffer(plt_img.getvalue(), dtype=np.uint8), 1)\n",
+    "                out.write(plt_img)\n",
+    "                cnt = cnt + 1\n",
+    "                if cv2.waitKey(5) & 0xFF == 27:\n",
+    "                    break\n",
+    "    cap.release()\n",
+    "    out.release()\n",
+    "    cv2.waitKey(0) \n",
+    "    cv2.destroyAllWindows() "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4c42510",
+   "id": "211d40ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 29%|███████████████████████▍                                                         | 29/100 [00:24<00:54,  1.29it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "from_video_3d('./data/videos/vid1.mp4')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac403c5d",
    "metadata": {},
    "outputs": [],
    "source": []
