--- a/Pose esitmation.ipynb
+++ b/Pose esitmation.ipynb
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bd105bfc",
+   "id": "b4e9bbe5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b0eb0d4f",
+   "id": "ac8c73b7",
    "metadata": {},
    "outputs": [
     {
@@ -461,16 +461,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "211d40ab",
+   "execution_count": 17,
+   "id": "77c1837b",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 29%|███████████████████████▍                                                         | 29/100 [00:24<00:54,  1.29it/s]"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [01:21<00:00,  1.23it/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -480,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac403c5d",
+   "id": "93f9d097",
    "metadata": {},
    "outputs": [],
    "source": []
