add draw landmarks

--- a/Pose esitmation.ipynb
+++ b/Pose esitmation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f228e9b9",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "b4e9bbe5",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "id": "90ebcfe7",
    "metadata": {},
    "outputs": [],
@@ -155,6 +155,23 @@
     "\n",
     "def normalize_color(color):\n",
     "    return tuple(v / 255. for v in color)\n",
+    "\n",
+    "def normalized_to_pixel_coordinates(\n",
+    "    normalized_x: float,\n",
+    "    normalized_y: float,\n",
+    "    image_width: int,\n",
+    "    image_height: int) -> Union[None, Tuple[int, int]]:\n",
+    "    \"\"\"Converts normalized value pair to pixel coordinates.\"\"\"\n",
+    "\n",
+    "      # Checks if the float value is between 0 and 1.\n",
+    "    def is_valid_normalized_value(value: float) -> bool:\n",
+    "        return (value > 0 or math.isclose(0, value)) and (value < 1 or math.isclose(1, value))\n",
+    "\n",
+    "    if not (is_valid_normalized_value(normalized_x) and is_valid_normalized_value(normalized_y)):\n",
+    "        return None\n",
+    "    x_px = min(math.floor(normalized_x * image_width), image_width - 1)\n",
+    "    y_px = min(math.floor(normalized_y * image_height), image_height - 1)\n",
+    "    return x_px, y_px\n",
     "\n",
     "def draw_body_landmarks(\n",
     "        landmark_list: landmark_pb2.NormalizedLandmarkList,\n",
@@ -199,7 +216,7 @@
     "            color=normalize_color(connection_drawing_spec.color[::-1]),\n",
     "            linewidth=connection_drawing_spec.thickness)\n",
     "\n",
-    "def plot_landmarks(landmark_list: landmark_pb2.NormalizedLandmarkList,\n",
+    "def plot_landmarks_3d(landmark_list: landmark_pb2.NormalizedLandmarkList,\n",
     "                   connections: Optional[List[Tuple[int, int]]] = None,\n",
     "                   landmark_drawing_spec: DrawingSpec = DrawingSpec(\n",
     "                       color=RED_COLOR, thickness=3),\n",
@@ -250,12 +267,83 @@
     "    buf.seek(0)\n",
     "    plt.close()\n",
     "    plt.clf()\n",
-    "    return buf"
+    "    return buf\n",
+    "\n",
+    "def draw_landmarks(\n",
+    "    image: np.ndarray,\n",
+    "    landmark_list: landmark_pb2.NormalizedLandmarkList,\n",
+    "    connections: Optional[List[Tuple[int, int]]] = None,\n",
+    "    landmark_drawing_spec: Union[DrawingSpec,\n",
+    "                                 Mapping[int, DrawingSpec]] = DrawingSpec(\n",
+    "                                     color=RED_COLOR),\n",
+    "    connection_drawing_spec: Union[DrawingSpec,\n",
+    "                                   Mapping[Tuple[int, int],\n",
+    "                                           DrawingSpec]] = DrawingSpec()):\n",
+    "    \"\"\"Draws the landmarks and the connections on the image.\n",
+    "\n",
+    "  Args:\n",
+    "    image: A three channel BGR image represented as numpy ndarray.\n",
+    "    landmark_list: A normalized landmark list proto message to be annotated on\n",
+    "      the image.\n",
+    "    connections: A list of landmark index tuples that specifies how landmarks to\n",
+    "      be connected in the drawing.\n",
+    "    landmark_drawing_spec: Either a DrawingSpec object or a mapping from\n",
+    "      hand landmarks to the DrawingSpecs that specifies the landmarks' drawing\n",
+    "      settings such as color, line thickness, and circle radius.\n",
+    "      If this argument is explicitly set to None, no landmarks will be drawn.\n",
+    "    connection_drawing_spec: Either a DrawingSpec object or a mapping from\n",
+    "      hand connections to the DrawingSpecs that specifies the\n",
+    "      connections' drawing settings such as color and line thickness.\n",
+    "      If this argument is explicitly set to None, no landmark connections will\n",
+    "      be drawn.\n",
+    "\n",
+    "  Raises:\n",
+    "    ValueError: If one of the followings:\n",
+    "      a) If the input image is not three channel BGR.\n",
+    "      b) If any connetions contain invalid landmark index.\n",
+    "  \"\"\"\n",
+    "    if not landmark_list:\n",
+    "        return\n",
+    "    if image.shape[2] != _BGR_CHANNELS:\n",
+    "        raise ValueError('Input image must contain three channel bgr data.')\n",
+    "    image_rows, image_cols, _ = image.shape\n",
+    "    idx_to_coordinates = {}\n",
+    "    for body_landmark_id in BODY_LANDMARKS:\n",
+    "        landmark = landmark_list.landmark[body_landmark_id]\n",
+    "        if ((landmark.HasField('visibility') and\n",
+    "             landmark.visibility < _VISIBILITY_THRESHOLD) or\n",
+    "            (landmark.HasField('presence') and\n",
+    "             landmark.presence < _PRESENCE_THRESHOLD)):\n",
+    "            continue\n",
+    "        landmark_px = normalized_to_pixel_coordinates(landmark.x, landmark.y, image_cols, image_rows)\n",
+    "        if landmark_px:\n",
+    "            idx_to_coordinates[body_landmark_id] = landmark_px\n",
+    "    if connections:\n",
+    "        for connection in BODY_CONNECTIONS:\n",
+    "            start_idx = connection[0]\n",
+    "            end_idx = connection[1]\n",
+    "            if start_idx in idx_to_coordinates and end_idx in idx_to_coordinates:\n",
+    "                drawing_spec = connection_drawing_spec[connection] if isinstance(\n",
+    "                    connection_drawing_spec, Mapping) else connection_drawing_spec\n",
+    "                cv2.line(image, idx_to_coordinates[start_idx],\n",
+    "                         idx_to_coordinates[end_idx], drawing_spec.color,\n",
+    "                         drawing_spec.thickness)\n",
+    "    # Draws landmark points after finishing the connection lines, which is\n",
+    "    # aesthetically better.\n",
+    "    if landmark_drawing_spec:\n",
+    "        for idx, landmark_px in idx_to_coordinates.items():\n",
+    "            drawing_spec = landmark_drawing_spec[idx] if isinstance(landmark_drawing_spec, Mapping) else landmark_drawing_spec\n",
+    "              # White circle border\n",
+    "            circle_border_radius = max(drawing_spec.circle_radius + 1, int(drawing_spec.circle_radius * 1.2))\n",
+    "            cv2.circle(image, landmark_px, circle_border_radius, WHITE_COLOR, drawing_spec.thickness)\n",
+    "              # Fill color into the circle\n",
+    "            cv2.circle(image, landmark_px, drawing_spec.circle_radius, drawing_spec.color, drawing_spec.thickness)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "id": "5b7dd8d7",
    "metadata": {},
    "outputs": [
@@ -291,60 +379,31 @@
     "    model_complexity=2) as pose:\n",
     "    image = cv2.imread(img_path)\n",
     "    results = pose.process(cv2.cvtColor(image, cv2.COLOR_BGR2RGB))\n",
-    "    \n",
     "    r = results\n",
-    "    image.flags.writeable = True\n",
-    "    image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
-    "    mp_drawing.draw_landmarks(\n",
+    "    draw_landmarks(\n",
     "        image,\n",
     "        results.pose_landmarks,\n",
     "        mp_pose.POSE_CONNECTIONS,\n",
     "        landmark_drawing_spec=mp_drawing_styles.get_default_pose_landmarks_style())\n",
-    "    # mp_drawing.plot_landmarks(results.pose_world_landmarks, mp_pose.POSE_CONNECTIONS)\n",
     "    plt_img = plot_landmarks(results.pose_world_landmarks, mp_pose.POSE_CONNECTIONS, show=True, save_path='3dpic.png')\n",
-    "    # cv2.imshow(\"Someimage\",image)\n",
+    "    cv2.imshow(\"Someimage\",image)\n",
     "    cv2.waitKey(0) \n",
     "    cv2.destroyAllWindows() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ac8c73b7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "x: 0.2344716489315033\n",
-       "y: 0.7250869870185852\n",
-       "z: -0.257039874792099\n",
-       "visibility: 0.9636950492858887"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r.pose_landmarks.landmark[26]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "0a5b3f22",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def from_video(path, save=True):\n",
+    "def from_video_front(path, save=True):\n",
     "    cap = cv2.VideoCapture(path)\n",
     "    cnt = 1\n",
     "    frames = 100\n",
     "    fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
-    "    out = cv2.VideoWriter('pose2.mp4', fourcc, 20.0, (480,640))\n",
-    "    out2 = cv2.VideoWriter('pose_ground.mp4', fourcc, 20.0, (480,640))\n",
+    "    out = cv2.VideoWriter('pose_front.mp4', fourcc, 30.0, (1080, 1920))\n",
     "    with mp_pose.Pose(\n",
     "        min_detection_confidence=0.5,\n",
     "        min_tracking_confidence=0.5,\n",
@@ -362,36 +421,26 @@
     "\n",
     "                image.flags.writeable = True\n",
     "                image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
-    "                mp_drawing.draw_landmarks(\n",
+    "                draw_landmarks(\n",
     "                    image,\n",
     "                    results.pose_landmarks,\n",
     "                    mp_pose.POSE_CONNECTIONS,\n",
     "                    landmark_drawing_spec=mp_drawing_styles.get_default_pose_landmarks_style())\n",
-    "                image = cv2.resize(image, (480, 640))\n",
     "                # cv2.imshow('Pose detection', cv2.flip(image, -1))\n",
     "                if save:\n",
     "                    out.write(image)\n",
-    "                    plt_img = plot_landmarks(\n",
-    "                        results.pose_world_landmarks,\n",
-    "                        mp_pose.POSE_CONNECTIONS,\n",
-    "                        azimuth=cnt*2)\n",
-    "\n",
-    "                    plt_img = cv2.imdecode(np.frombuffer(plt_img.getvalue(), dtype=np.uint8), 1)\n",
-    "                    plt_img = cv2.resize(plt_img, (480, 640))\n",
-    "                    out2.write(plt_img)\n",
     "                cnt = cnt + 1\n",
     "                if cv2.waitKey(5) & 0xFF == 27:\n",
     "                    break\n",
     "    cap.release()\n",
     "    out.release()\n",
-    "    out2.release()\n",
     "    cv2.waitKey(0) \n",
     "    cv2.destroyAllWindows() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "272da8f9",
    "metadata": {},
    "outputs": [
@@ -399,21 +448,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [01:23<00:00,  1.20it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:32<00:00,  3.12it/s]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "from_video('./data/videos/vid1.mp4')"
+    "from_video_front('./data/videos/vid1.mp4')"
    ]
   },
   {
