--- a/Pose esitmation.ipynb
+++ b/Pose esitmation.ipynb
@@ -380,7 +380,7 @@
     "    image = cv2.imread(img_path)\n",
     "    results = pose.process(cv2.cvtColor(image, cv2.COLOR_BGR2RGB))\n",
     "    r = results\n",
-    "    draw_landmarks(\n",
+    "    draw_landarks(\n",
     "        image,\n",
     "        results.pose_landmarks,\n",
     "        mp_pose.POSE_CONNECTIONS,\n",
